src/k8s/apps/methodconf.com/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: methodconf-com-staging
  labels:
    app.kubernetes.io/name: methodconf
    app.kubernetes.io/instance: staging
